@@ -101,6 +101,7 @@
 * Decidir and DecicirPlus: Add the wallet_id field [yunnydang] #5354
 * Worldpay: Update where to pass shopperIPAddress [almalee24] #5348
 * Braintree: Account for BraintreeError [almalee24] #5346
+* Worldpay: Fix stored credentials unscheduled reason type [Buitragox] #5352 
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
